Removes flexbox, corrects how photo is displayed on safari browsers

--- a/assets/stylesheets/components/_hero.scss
+++ b/assets/stylesheets/components/_hero.scss
@@ -19,17 +19,17 @@
   }
 }
 
-.photo {
-  display: none;
+.hero__photo {
+  background: url("../images/portrait.jpg") center no-repeat;
+  background-size: cover;
+  border: 4px solid $white;
+  border-radius: $circle;
+  height: 125px;
+  margin: 0 auto 1.5rem;
+  width: 125px;
 
   @media #{$medium} {
-    background: url("../images/portrait.jpg") center no-repeat;
-    background-size: cover;
-    border: 4px solid $white;
-    border-radius: $circle;
-    display: block;
-    margin-right: 1.5rem;
-    height: 125px;
-    width: 125px;
+    float: left;
+    margin: 0 2rem 0 0;
   }
 }
