--- a/assets/stylesheets/components/_layout.scss
+++ b/assets/stylesheets/components/_layout.scss
@@ -42,11 +42,6 @@ section {
   width: 90%;
 }
 
-.container--align-middle {
-  align-items: center;
-  display: flex;
-}
-
 hr {
   border: 0;
   background: $border-light;
